--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -890,8 +890,8 @@ Transaction.comment=Comment
 #Field tooltip in the "new transaction" dialog
 TransactionDialog.comment.tooltip=Enter a comment for the transaction 
 #New checkbox in the preference panel to set how the comment is displayed in the tables (merge with description, or in its own column).
-MainFrame.Transactions.Preferences.commentDisplay=Show comment and description in separate columns
-MainFrame.Transactions.Preferences.commentDisplay.tooltip=Check this box to display comment in a separate column (Otherwise, the comment is shown in parentheses after the description.)
+MainFrame.Transactions.Preferences.commentDisplay=Display comment and description in separate columns
+MainFrame.Transactions.Preferences.commentDisplay.tooltip=Select this to display comment in a separate column (Otherwise, the comment is shown in parentheses after the description.)
 #Tooltips of the comment filter box
 CustomFilterPanel.comment.toolTip=Text to compare with transaction's comment; used as a transaction filter
 CustomFilterPanel.comment.contains.toolTip=Select this if the comment should contain the entered text
@@ -1234,7 +1234,11 @@ CheckModePanel.target.tooltip=<html>Enter the ending balance of your statement.<
 CheckModePanel.gap=(Gap: {0})
 
 Archive.menu.name=Archive
-Archive.menu.tooltip=Archives old transactions to an archive file
+Archive.menu.tooltip=Archives old statements to an archive file
 Archive.selectionDialog.title=Choose the archive file or create a new one
 Archive.selectionDialog.create=Create
 Archive.selectionDialog.select=Select
+
+#New setting of the transaction table
+MainFrame.Transactions.Preferences.separateExpenseReceipt=Display receipts and expense in separate column
+MainFrame.Transactions.Preferences.separateExpenseReceipt.tooltip=Select this to display receipts and expenses in separate columns
