--- a/Yapbam/customPaths.properties
+++ b/Yapbam/customPaths.properties
@@ -1,35 +1,37 @@
-jcommon.path=C:/Users/Jean-Marc/workspace/jcommon-1.0.16/sourceJCommon
+jcommon.path=../externalProjects/jcommon-1.0.16/sourceJCommon
 
-jfreechart.path=C:/Users/Jean-Marc/workspace/jfreechart/source
+jfreechart.path=../externalProjects/jfreechart/source
 
-opencsv.path=C:/Users/Jean-Marc/workspace/opencsv/src
+opencsv.path=../externalProjects/opencsv/src
 
-yapbam.commons.path=C:/Users/Jean-Marc/workspace/YapbamCommons/src
+yapbam.commons.path=../YapbamCommons/src
 
-ajlib.path=C:/Users/Jean-Marc/workspace/A-JLib/src
+ajlib.path=../A-JLib/src
 
-javaluator.path=C:/Users/Jean-Marc/workspace/javaluator/src/main/java
+javaluator.path=../javaluator-parent/javaluator/src/main/java
 
-jclop.path=C:/Users/Jean-Marc/workspace/JClop/src
-jclop-dropbox.path=C:/Users/Jean-Marc/workspace/JClop-Dropbox/src
+jclop.path=../JClop/src/main/java
+jclop-dropbox.path=../JClop-Dropbox/src
 
 <!-- The following folder should contain 1.5.3 Dropbox API sources or later.
 	libraries used by dropbox are defined below --> 
-dropbox.path=C:/Users/Jean-Marc/workspace/DropboxAPI/src
+dropbox.path=../externalProjects/DropboxAPI/src
 
-apache.commons.lang.path=C:/Users/Jean-Marc/workspace/commons-lang/src
+apache.commons.lang.path=../externalProjects/commons-lang/src
 
-apache.commons.logging.path=C:/Users/Jean-Marc/workspace/apacheCommonsLogging/src
+apache.commons.logging.path=../externalProjects/apacheCommonsLogging/src
 
-apache.commons.codec.path=C:/Users/Jean-Marc/workspace/apacheCommonsCodec/src
+apache.commons.codec.path=../externalProjects/apacheCommonsCodec/src
 
 <!-- As the http client and http mime have circular references and are delivered in the same zip
 	at the apache web site, the following folder is expected to contain both.
 	Version should be 4.2.3 or later --> 
-apache.http.client.path=C:/Users/Jean-Marc/workspace/apacheHttpClient/src
+apache.http.client.path=../externalProjects/apacheHttpClient/src
 
-apache.http.core.path=C:/Users/Jean-Marc/workspace/apacheHttpCore/src
+apache.http.core.path=../externalProjects/apacheHttpCore/src
 
-jsonsimple.path=C:/Users/Jean-Marc/workspace/json_simple/src
+jsonsimple.path=../externalProjects/json_simple/src
+
+slf4j.path=../externalProjects/slf4j/src/main/java
 
 portableappsinstallerpath=C:/Users/Jean-Marc/Documents/ApplisPortables/PortableApps.comInstaller
