--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -1242,3 +1242,10 @@ Archive.selectionDialog.select=Select
 #New setting of the transaction table
 MainFrame.Transactions.Preferences.separateExpenseReceipt=Display receipts and expense in separate column
 MainFrame.Transactions.Preferences.separateExpenseReceipt.tooltip=Select this to display receipts and expenses in separate columns
+
+#New settings of the transaction table in the balance history pane
+BalanceHistory.prefs.highlightAlerts=Highlight alerts
+BalanceHistory.prefs.highlightAlerts.tooltip=Check this box to highlight the lines that trigger balance alerts
+BalanceHistory.prefs.sameBackgroundAsTransactionTable=<html>Same background as the "<b>{0}</b>" tab</html>
+BalanceHistory.prefs.sameBackgroundAsTransactionTable.tooltip=<html>Check this box to use same background colors as the "<b>{0}</b>" tab</html>
+BalanceHistory.prefs.title=Through this tab you can configure the display of the balance history table
