--- a/Yapbam/customPaths.properties
+++ b/Yapbam/customPaths.properties
@@ -1,3 +1,6 @@
+launcher.path=../yapbam-launcher/src/main/java
+updater.path=../yapbam-updater/src/main/java
+
 jcommon.path=../externalProjects/jcommon-1.0.16/sourceJCommon
 
 jfreechart.path=../externalProjects/jfreechart/source
@@ -11,7 +14,7 @@ ajlib.path=../A-JLib/src
 javaluator.path=../javaluator-parent/javaluator/src/main/java
 
 jclop.path=../JClop/src/main/java
-jclop-dropbox.path=../JClop-Dropbox/src
+jclop-dropbox.path=../JClop-Dropbox/src/main/java
 
 <!-- The following folder should contain 1.5.3 Dropbox API sources or later.
 	libraries used by dropbox are defined below --> 
