--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1233,11 +1233,23 @@ CheckModePanel.target=Target balance at end:
 CheckModePanel.target.tooltip=<html>Enter the ending balance of your statement.<br>The field below will then show the difference between the current balance and that target.</html>
 CheckModePanel.gap=(Gap: {0})
 
+#New generic wordings
+Generic.selectAll=Select all
+Generic.unselectAll=Unselect all
+
+#A new tool to archive old transactions in a separate file
 Archive.menu.name=Archive
 Archive.menu.tooltip=Archives old statements to an archive file
 Archive.selectionDialog.title=Choose the archive file or create a new one
 Archive.selectionDialog.create=Create
 Archive.selectionDialog.select=Select
+Archive.statementSelection.helpMessage=<html>Please select the statements you want to archive.<br><br>Click on cell in the \"{0} \" column to display the statement list.<br>The selected statement and all preceding statements will be archived.</html>
+Archive.statementSelection.ignored.title=Ignored
+Archive.statementSelection.nothingSelected=There is no statement in this account
+Archive.statementSelection.noTransactionSelected=No transaction selected
+Archive.statementSelection.until.title=Until statement
+Archive.accountBalancesNotMatch=The initial balance of <b>"{0}"</b> account ({1}) is not equals to the final balance of this account in the archive ({2}).
+Archive.accountBalancesNotMatchFinalMessage=Do you want to continue anyway?
 
 #New setting of the transaction table
 MainFrame.Transactions.Preferences.separateExpenseReceipt=Display receipts and expense in separate column
