--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -1250,6 +1250,7 @@ Archive.statementSelection.noTransactionSelected=No transaction selected
 Archive.statementSelection.until.title=Until statement
 Archive.accountBalancesNotMatch=The initial balance of <b>"{0}"</b> account ({1}) is not equals to the final balance of this account in the archive ({2}).
 Archive.accountBalancesNotMatchFinalMessage=Do you want to continue anyway?
+Archive.report={0} transactions have been successfully archived.
 
 #New setting of the transaction table
 MainFrame.Transactions.Preferences.separateExpenseReceipt=Display receipts and expense in separate column
