--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -1234,6 +1234,7 @@ CheckModePanel.target.tooltip=<html>Enter the ending balance of your statement.<
 CheckModePanel.gap=(Gap: {0})
 
 #New generic wordings
+GenericButton.select=Select
 Generic.selectAll=Select all
 Generic.unselectAll=Unselect all
 
@@ -1241,8 +1242,6 @@ Generic.unselectAll=Unselect all
 Archive.menu.name=Archive
 Archive.menu.tooltip=Archives old statements to an archive file
 Archive.selectionDialog.title=Choose the archive file or create a new one
-Archive.selectionDialog.create=Create
-Archive.selectionDialog.select=Select
 Archive.statementSelection.helpMessage=<html>Please select the statements you want to archive.<br><br>Click on cell in the \"{0} \" column to display the statement list.<br>The selected statement and all preceding statements will be archived.</html>
 Archive.statementSelection.ignored.title=Ignored
 Archive.statementSelection.nothingSelected=There is no statement in this account
