--- a/Yapbam/customPaths.properties
+++ b/Yapbam/customPaths.properties
@@ -1,11 +1,12 @@
 launcher.path=../yapbam-launcher/src/main/java
 updater.path=../yapbam-updater/src/main/java
+slf4j-api.path=../externalSrc/slf4j-api/1.7.5/slf4j-api-1.7.5-sources.jar
 
-jcommon.path=../externalProjects/jcommon-1.0.16/sourceJCommon
+jcommon.path=C:/Users/jma/workspace/jcommon-1.0.16/sourceJCommon
 
-jfreechart.path=../externalProjects/jfreechart/source
+jfreechart.path=C:/Users/jma/workspace/jfreechart/source
 
-opencsv.path=../externalProjects/opencsv/src
+opencsv.path=C:/Users/jma/workspace/opencsv/src
 
 yapbam.commons.path=../YapbamCommons/src
 
@@ -14,27 +15,27 @@ ajlib.path=../A-JLib/src
 javaluator.path=../javaluator-parent/javaluator/src/main/java
 
 jclop.path=../JClop/src/main/java
+jclop.resources.path=../JClop/src/main/resources
 jclop-dropbox.path=../JClop-Dropbox/src/main/java
+jclop-dropbox.resources.path=../JClop-Dropbox/src/main/resources
 
 <!-- The following folder should contain 1.5.3 Dropbox API sources or later.
 	libraries used by dropbox are defined below --> 
-dropbox.path=../externalProjects/DropboxAPI/src
+dropbox.path=C:/Users/jma/workspace/DropboxAPI/src
 
-apache.commons.lang.path=../externalProjects/commons-lang/src
+apache.commons.lang.path=C:/Users/jma/workspace/commons-lang/src
 
-apache.commons.logging.path=../externalProjects/apacheCommonsLogging/src
+apache.commons.logging.path=C:/Users/jma/workspace/apacheCommonsLogging/src
 
-apache.commons.codec.path=../externalProjects/apacheCommonsCodec/src
+apache.commons.codec.path=C:/Users/jma/workspace/apacheCommonsCodec/src
 
 <!-- As the http client and http mime have circular references and are delivered in the same zip
 	at the apache web site, the following folder is expected to contain both.
 	Version should be 4.2.3 or later --> 
-apache.http.client.path=../externalProjects/apacheHttpClient/src
+apache.http.client.path=C:/Users/jma/workspace/apacheHttpClient/src
 
-apache.http.core.path=../externalProjects/apacheHttpCore/src
+apache.http.core.path=C:/Users/jma/workspace/apacheHttpCore/src
 
-jsonsimple.path=../externalProjects/json_simple/src
+jsonsimple.path=C:/Users/jma/workspace/json_simple/src
 
-slf4j.path=../externalProjects/slf4j/src/main/java
-
-portableappsinstallerpath=C:/Users/Jean-Marc/Documents/ApplisPortables/PortableApps.comInstaller
+portableappsinstallerpath=C:/Users/jma/Documents/ApplisPortables/PortableApps.comInstaller
