--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -1261,3 +1261,5 @@ BalanceHistory.prefs.highlightAlerts.tooltip=Check this box to highlight the lin
 BalanceHistory.prefs.sameBackgroundAsTransactionTable=<html>Same background as the "<b>{0}</b>" tab</html>
 BalanceHistory.prefs.sameBackgroundAsTransactionTable.tooltip=<html>Check this box to use same background colors as the "<b>{0}</b>" tab</html>
 BalanceHistory.prefs.title=Through this tab you can configure the display of the balance history table
+
+Archive.warning.notAnArchiveFile=O arquivo selecionado não é um arquivo de dados (é um arquivo de dados padrão).
