--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -432,8 +432,8 @@ AccountManager.deleteMessage.title=Non-empty account deletion
 AccountManager.title=Accounts management
 AccountManager.toolTip=This tab allows you to manage your accounts
 AccountManager.transactionsNumber.title=Number of transactions
-AccountManager.modesNumber.title=Number of payment modes
-AccountManager.checkbooksNumber.title=Number of checkbooks
+#AccountManager.modesNumber.title=Number of payment modes
+#AccountManager.checkbooksNumber.title=Number of checkbooks
 AccountManager.alertThresholdLess.title=Alert if balance is less than
 AccountManager.alertThresholdMore.title=Alert if balance is more than
 #AccountManager.balanceColumn.toolTip=Double click this cell to edit the account's initial balance (The Enter key validates your input)
@@ -1285,3 +1285,5 @@ TransactionEditingPreferencesPanel.wizard.last=Last value
 TransactionEditingPreferencesPanel.wizard.last.tooltip=Select this option to reuse the amount of last transaction with the selected description 
 TransactionEditingPreferencesPanel.wizard.mostProbable=Most probable amount
 TransactionEditingPreferencesPanel.wizard.mostProbable.tooltip=Select this option to use the most used amount with the selected description during last months
+
+AccountsSummary.uncheckedTransactionsNumber=Unchecked
