--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -431,7 +431,6 @@ AccountManager.deleteMessage.one=The only transaction it contains will also be d
 AccountManager.deleteMessage.title=Non-empty account deletion
 AccountManager.title=Accounts management
 AccountManager.toolTip=This tab allows you to manage your accounts
-AccountManager.transactionsNumber.title=Number of transactions
 #AccountManager.modesNumber.title=Number of payment modes
 #AccountManager.checkbooksNumber.title=Number of checkbooks
 AccountManager.alertThresholdLess.title=Alert if balance is less than
@@ -616,8 +615,6 @@ ImportDialog.linkedTo=Linked to
 ImportDialog.linkedTo.toolTip=Check these boxes to associate columns in the file with fields of transactions
 ImportDialog.importedFields=Columns in the file
 ImportDialog.importedFields.toolTip=Select the column corresponding to each Yapbam transaction field
-ImportDialog.ignoreFirstLine=Ignore first line
-ImportDialog.ignoreFirstLine.toolTip=If the first line of the file is a header, check this box to ignore the header 
 ImportDialog.first.toolTip=Uses the first line of the imported file for identifying the column titles
 ImportDialog.last.toolTip=Uses the last line of the imported file for identifying the column titles
 ImportDialog.next.toolTip=Uses the next line of the imported file for identifying the column titles
@@ -811,6 +808,7 @@ AccountsSummary.tooltip=Summary of all accounts
 AccountsSummary.CheckedBalance=Checked balance
 AccountsSummary.CurrentBalance=Current balance
 AccountsSummary.FinalBalance=Final balance
+AccountsSummary.TransactionsNumber=Number of transactions
 #-------- End of AccountsSummaryView --------
 
 #-------- New "important news" screen -------
@@ -1286,4 +1284,4 @@ TransactionEditingPreferencesPanel.wizard.last.tooltip=Select this option to reu
 TransactionEditingPreferencesPanel.wizard.mostProbable=Most probable amount
 TransactionEditingPreferencesPanel.wizard.mostProbable.tooltip=Select this option to use the most used amount with the selected description during last months
 
-AccountsSummary.uncheckedTransactionsNumber=Unchecked
+AccountsSummary.UncheckedTransactionsNumber=Unchecked
