--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -33,7 +33,8 @@ MainMenu.File.ToolTip=Allows you to create, open and save account files
 
 MainMenu.NewFile=New
 MainMenu.NewFile.Mnemonic=N
-MainMenu.NewFile.ToolTip=Creates a new blank account file (without transactions or accounts) 
+MainMenu.NewFile.ToolTip=Creates a new blank account file (without transactions or accounts)
+MainMenu.NewFile.ConfirmMessage=You are about to create a new empty data file. Do you want to continue?
 
 MainMenu.Open=Open
 MainMenu.Open.Mnemonic=O
