--- a/Yapbam/build.xml
+++ b/Yapbam/build.xml
@@ -20,7 +20,7 @@
 	<!-- Yapbam version. This should have the following format = major.minor.build.comment were
 		major, minor and build are integers. comment is a string that do not contain space character. 
 	 -->
-	<property name="yapbamVersion" value="0.17.5"/>
+	<property name="yapbamVersion" value="0.17.6"/>
 	<tstamp><format property="TODAY" pattern="dd/MM/yyyy" locale="fr,FR"/></tstamp>
 	
 	<property name="releaseDir" value="YapbamRelease"/>
@@ -42,6 +42,10 @@
 		<jar destfile="updater.jar">
 			<manifest>
 				<attribute name="Main-Class" value="net.yapbam.updater.Updater"/>
+	      <attribute name="Permissions" value="all-permissions"/>
+				<attribute name="Application-Name" value="Yapbam"/>
+				<attribute name="Entry-Point" value="net.yapbam.gui.MainFrame"/>
+				<attribute name="Trusted-Only" value="true"/>
 			</manifest>
 			<fileset dir="releaseCompile"/>
 		</jar>
