--- a/Yapbam/src/net/yapbam/gui/obsoleteFilesChecksums.properties
+++ b/Yapbam/src/net/yapbam/gui/obsoleteFilesChecksums.properties
@@ -13,5 +13,5 @@ help%2Ffr%2Fimport.html=a304ddce2ee618f34d54c5b7395bc16e
 help%2Ffr%2Fregexp.html=69b6bc3e04fc55aa78b88d477c734ae8
 yapbam.jar=45b144136e2e7c3df598da37752df098,daeea23487739c06e192c1ca2ba5ec07,97a29bd3302c3dd4eaeb95b7acf3acf6,a77ea61af3d90e30f176e3022bad6ebf,c19f69940fd141f5478cdba21cba171d,55b3129c893cd60121cb6c51767a21f0,4737d1f220a9503ca457264c778d06f3,4a50b4bc45670772a35903bf00a6acac,bb771c27ed6e3636f8890142a5a8158f,304944fbb38a1148f693ded99bdcd207
 yapbam.bat=a050dc5266dd41b2c93d3cb2afb54ad1
-Other%2Fsamples%2FYapbamDataSample_en=7ad7fae0115792f12829f3b46ab5b918
-Other%2Fsamples%2FYapbamDataSample_fr=78f87b2c967e5daa10543fbb4e6aab75
+Other%2Fsamples%2FYapbamDataSample_en.xml=7ad7fae0115792f12829f3b46ab5b918
+Other%2Fsamples%2FYapbamDataSample_fr.xml=78f87b2c967e5daa10543fbb4e6aab75
