--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -273,6 +273,8 @@ GenericButton.yes=Yes
 GenericButton.no=No
 GenericButton.ignore=Ignore
 GenericButton.continue=Continue
+#A generic button in the alert dialog to deactivate the alert
+GenericButton.dontAskMeAnyMore=Don't ask me anymore
 
 Transaction.0=S/T
 Transaction.account=Account
